[gd_scene load_steps=2 format=3 uid="uid://bxi6igacy8uad"]

[ext_resource type="Script" uid="uid://dgkgrlig20b2d" path="res://scripts/ui/CombatUI.gd" id="1_vee16"]

[node name="CombatUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_vee16")

[node name="MainContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(230, 70)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -90.0
offset_right = 260.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_constants/separation = 5

[node name="ShieldContainer" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ShieldLabel" type="Label" parent="MainContainer/ShieldContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 100, 0, 1)
theme_override_font_sizes/font_size = 14
text = "SHIELDS"

[node name="ShieldBar" type="ProgressBar" parent="MainContainer/ShieldContainer"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false

[node name="HullContainer" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
theme_override_constants/separation = 10

[node name="HullLabel" type="Label" parent="MainContainer/HullContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 100, 0, 1)
theme_override_font_sizes/font_size = 14
text = "HULL"

[node name="HullBar" type="ProgressBar" parent="MainContainer/HullContainer"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false
